@@ -1,3 +1,8 @@
+2005-10-03  Tristan Van Berkom  <tvb@gnome.org>
+
+	* todo.html: Adjusted information regarding Glade 3, notably; added
+	  a reference to the GNOME download directory.
+
 2005-04-28  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: fixed gPowershot url.
